<resources>
    <string name="app_name">Shidduch View</string>
    <string name="sub_title">The Video Speed Date App</string>
    <string name="facebook_app_id" translatable="false">402107743733392</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb402107743733392</string>
    <string name="default_notification_channel_id" translatable="false">Shidduch View</string>
    <string name="default_notification_channel_name" translatable="false">The Video Speed Date App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="log_out">Logout</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="yes_small">Yes</string>
    <string name="no_small">No</string>
    <string name="ok">OK</string>
    <string name="msg_token_fmt" translatable="false">%s</string>
    <string name="failure_response">Unable to reach server, try again later!</string>
    <string name="failure_response_signin">Unable to reach server, please SignIn again!</string>
    <string name="loading">Loading...</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up_title">Sign up</string>
    <string name="sign_up"><u>&#160;SIGN UP</u></string>
    <string name="forgot_password_text">Use the email address that\'s associated with your application account.</string>
    <string name="reset_password" translatable="false">Reset Password</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="verify_password">Verify Password</string>
    <string name="registration">Registration</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="please_enter_first_name">Please enter First name.</string>
    <string name="please_enter_last_name">Please enter Last name.</string>
    <string name="please_enter_email">Please enter Email.</string>
    <string name="please_enter_phone">Please enter Phone no.</string>
    <string name="please_enter_valid_email">Please enter valid Email.</string>
    <string name="please_enter_password">Please enter Password.</string>
    <string name="password_length_error">Password must have minimum 6 characters.</string>
    <string name="please_enter_something">Please provide notes.</string>
    <string name="please_enter_confirm_password">Please enter Confirm Password.</string>
    <string name="confirm_password_not_match">Password and Confirm Password not matched.</string>
    <string name="please_enter_valid_password">Please enter valid Password.</string>
    <string name="password_not_match">Password does not matched</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="partnership_text"><u>PARTNERSHIP</u></string>
    <string name="contact_us_text" translatable="false"><u>CONTACT US</u></string>
    <string name="endorsements_text"><u>ENDORSEMENTS</u></string>
    <string name="logout_text"><u>LOGOUT</u></string>
    <string name="partnership_title">Partnership</string>
    <string name="contact_us_title" translatable="false">Contact Us</string>
    <string name="endorsements_title">Endorsements</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="agree_with">Agree with</string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>
    <string name="terms_and_conditions_title">Terms and Conditions</string>
    <string name="i_agree">I Agree</string>
    <string name="with_other_email">Don\'t have an account?</string>
    <string name="up"><u>&#160;SIGN UP</u></string>
    <string name="sign_in_cap"><u>SIGN IN&#160;</u></string>
    <string name="remember_me">Remember me</string>
    <string name="ooops">Ooops!</string>
    <string name="no_match_available">No match available.</string>
    <string name="date_ended">Date Ended!</string>
    <string name="date_disconnected">Date Disconnected!</string>
    <string name="check_internet">No internet connection...</string>
    <string name="new_user_n_registration_form">NEW USER \nREGISTRATION FORM</string>
    <string name="done">DONE</string>
    <string name="next">NEXT</string>
    <string name="prev">&#10094; PREV</string>
    <string name="height">Height</string>
    <string name="d_o_b_age">Date of Birth</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="right_arrow">❯</string>
    <string name="answer_the_quiz" translatable="false">ANSWER THE QUIZ</string>
    <string name="not_valid_dob">Selected DOB is not valid!</string>
    <string name="fb_login_failed">Facebook sign in not performed!</string>
    <string name="google_login_failed">Google sign in not performed!</string>
    <string name="app_updated_sucessfully">Update Success</string>
    <string name="app_updated_failed">Update Failure! Please try again.</string>
    <string name="downloading">Downloading…</string>
    <string name="register_yourself">Sign up for an account!</string>
    <string name="register_yourself_message">The email address that you\'ve entered doesn\'t match any account.</string>
    <string name="hebrew_text" translatable="false">בס"ד</string>
    <string name="trouble_logging_in">Trouble Logging In?</string>
    <string name="reset_email_inst">Enter your email, and we\'ll send you a link to get back into your account.</string>
    <string name="send_link">Send Login Link</string>
    <string name="partnership_descriprion">Do you have an idea how we can\nmutually help people find their\nspouses?</string>
    <string name="email_us">If so, please send us an email to</string>
    <string name="support_email"><u>supportnetwork@shidduchview.com</u></string>
    <string name="account_email"><u>accountreconsideration@shidduchview.com</u></string>
    <string name="endorsement_description">Our goal is to help people find their\nspouses to build a true Jewish\nhome!</string>
    <string name="endorsement_instruction">To see what the Rabbanim write about us,\nplease visit our website at</string>
    <string name="www_shidduchview_com"><u>https://shidduchview.com</u></string>
    <string name="shidduch_view_link">http://www.shidduchview.com/</string>
    <string name="contactusone">If you have any question or comments, you may\nsend us an email at</string>
    <string name="contactustwo">Answers to many commonly asked questions\nare available on our website.</string>
    <string name="clientsupport_email"><u>clientsupport@shidduchview.com</u></string>
    <string name="gender">Gender</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="please_enter_name">Please enter Name.</string>
    <string name="please_enter_valid_name">Please enter valid Name.</string>
    <string name="check_your_email">Check your email</string>
    <string name="email_sent">Email sent out from the google email domain :\nnoreply@shidduchview.com</string>
    <string name="which_do_you_associate">Which do you associate more with?</string>
    <string name="matching_questions">Key Matching Questions</string>
    <string name="submit">Submit</string>
    <string name="geared_for_forum_people">THIS APP IS GEARED\nFOR FORUM PEOPLE</string>
    <string name="sorry_did_not_pass_quiz">SORRY YOU DID NOT PASS\nTHE QUIZ</string>
    <string name="if_you_feel_error">If you feel this message is an error, please email </string>
    <string name="we_plan_to_make">We plan to make this app available to the public at large very soon. If you feel this message to be in error, please send us an email that includes your phone number to</string>
    <string name="let_s_go">LET\'S GO!</string>
    <string name="welcome">Welcome!</string>
    <string name="overview">How it works</string>
    <string name="est_by_five">At a set time per day, you can go in 1 video speed date for 5 minutes with someone worldwide.</string>
    <string name="plus_five">If it\'s mutual, the next time that both of you are logged in at the same time, you\'ll have a 10 min date.</string>
    <string name="first_text">You can fill out questions and watch videos until the date starts.</string>
    <string name="second_text">Your \"blind date\" will be selected by an AIM, Artificial Intelligence Matchmaker and 3,2,1 - Enjoy your 5-minute date</string>
    <string name="third_text">Review the date and choose if you\'d like to go out again.</string>
    <string name="are_you_a_cohen">Are you a Cohen?</string>
    <string name="cohen">Cohen</string>
    <string name="are_you_able_to_marry_cohen">Are you able to marry a Cohen?</string>
    <string name="sure_to_close_this">Are you sure you want\nto leave from here?</string>
    <string name="sure_to_exit">Are you sure you want to Exit?</string>
    <string name="please_select_options">Please select options!</string>
    <string name="please_signin_again">Please SignIn again!</string>
    <string name="provide_all_answers">Please provide all answers.</string>
    <string name="please_agree_terms_and_conditions">Please Agree Terms and Conditions.</string>
    <string name="hebrew_t" translatable="false">ד</string>
    <string name="hebrew_quotes" translatable="false">\"</string>
    <string name="hebrew_dt" translatable="false">בס</string>
    <string name="please_wait">Please Wait...</string>
    <string name="email_not_found_via_fb">Your Email-Id is not verified by Facebook! \nTry to Sign Up or Sign In.</string>
    <string name="no_i_did_not">2. No, I didn\'t</string>
    <string name="goes_nlive_in">Date\nBegins\nin</string>
    <string name="h">h</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="training_the_ai">INTRODUCE YOURSELF</string>
    <string name="youtube_classes_list">YOUTUBE CLASSES LIST</string>
    <string name="time_zones">LIVE TIME (Eastern Time Zone)</string>
    <string name="mon_thu">MON - THU</string>
    <string name="west_coast">West Coast</string>
    <string name="east_coast">East Coast</string>
    <string name="london">London</string>
    <string name="israel">Israel</string>
    <string name="sure_to_logout">Are you sure you want to Logout?</string>
    <string name="youtube_error">There was an error initializing the YouTubePlayer</string>
    <string name="cancel">Cancel</string>
    <string name="special_offer">SPECIAL OFFER</string>
    <string name="subscribe_now">Subscribe now and get 7 days \nFREE trial</string>
    <string name="cancel_anytime">Cancel anytime</string>
    <string name="rate_shidduch">Shidduch View Ratings</string>
    <string name="our_goal">Our goal is to make happy healthy marriages.\nPlease assist and write a review : )</string>
    <string name="no_thanks">No, Thanks</string>
    <string name="rate_now">Rate now</string>
    <string name="don_t_close_the_app">Don\'t close the app</string>
    <string name="searching_for_a_match">Searching for a Match.</string>
    <string name="select_option">Select Option</string>
    <string name="document">Document</string>
    <string name="photo_library">Photo Library</string>
</resources>