<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_contactus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/contact_us_text"
        android:textColor="@color/purple"
        android:textSize="@dimen/text_size_12" />

    <TextView
        android:id="@+id/tv_partnership"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_8"
        android:layout_marginTop="8dp"
        android:layout_marginRight="@dimen/space_8"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/partnership_text"
        android:textColor="@color/purple"
        android:textSize="@dimen/text_size_12" />

    <TextView
        android:id="@+id/tv_endorsements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/endorsements_text"
        android:textColor="@color/purple"
        android:textSize="@dimen/text_size_12" />

</LinearLayout>