<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlBackLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/swap_card_shadow_80">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space_16"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/avenirnextltpro_demi"
                android:gravity="center_vertical"
                android:text="@string/special_offer"
                android:textColor="@color/text_purple"
                android:textSize="@dimen/text_size_22" />


            <TextView
                android:id="@+id/tvForthMTTZ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space_6"
                android:layout_weight="3"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/subscribe_now"
                android:textColor="@color/colorOrange"
                android:textSize="@dimen/text_size_20" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/avenirnextltpro_demi"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/space_6"
                android:text="@string/cancel_anytime"
                android:textColor="@color/text_purple"
                android:textSize="@dimen/text_size_18" />


            <Button
                android:id="@+id/btn_ok"
                android:layout_width="120dp"
                android:visibility="visible"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="@dimen/space_6"
                android:background="@drawable/curved_shape_orange"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/text_size_16"
/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
