<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_4sdp"
        app:cardCornerRadius="@dimen/_12sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextViewCircularMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/select_option"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/_13sdp" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/gray" />

         <!--   <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewCamera"
                style="@style/TextViewCircularMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/camera"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/_11sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />
-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewPhotoLibrary"
                style="@style/TextViewCircularMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/photo_library"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/_11sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewDocument"
                style="@style/TextViewCircularMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/document"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/_11sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewCancel"
                style="@style/TextViewCircularMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/cancel"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/_11sdp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>