<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">
    <!-- android:background="@android:color/transparent"-->

    <RelativeLayout
        android:id="@+id/rlBackLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/swap_card_shadow_80">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:layout_margin="@dimen/space_12"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space_16"
                android:fontFamily="@font/avenirnextltpro_demi"
                android:gravity="center_vertical"
                android:text="@string/rate_shidduch"
                android:textColor="@color/black"

                android:textSize="@dimen/text_size_20" />


            <TextView
                android:id="@+id/tvForthMTTZ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/space_16"
                android:layout_marginTop="@dimen/space_4"
                android:layout_marginEnd="@dimen/space_16"
                android:layout_weight="3"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/our_goal"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/space_8"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight=".5"
                    android:id="@+id/textViewNoThanks"
                    android:padding="@dimen/space_12"
                    android:fontFamily="@font/avenirnextltpro_demi"
                    android:gravity="center"
                    android:text="@string/no_thanks"
                    android:textColor="@color/colorPrimary"

                    android:textSize="@dimen/text_size_18" />

                <View
                    android:layout_width="1dp"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/space_50"
                    android:background="@color/gray" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight=".5"
                    android:id="@+id/textViewRateNow"
                    android:padding="@dimen/space_12"
                    android:fontFamily="@font/avenirnextltpro_demi"
                    android:gravity="center"
                    android:text="@string/rate_now"
                    android:textColor="@color/colorPrimary"

                    android:textSize="@dimen/text_size_18" />


            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
